<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_normal"
            android:paddingTop="@dimen/spacing_unit">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_pattern"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rule_pattern">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pattern"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_unit"
                android:text="@string/rule_feature"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <Spinner
                android:id="@+id/spinner_feature"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_unit"
                android:text="@string/match_mode"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <Spinner
                android:id="@+id/spinner_match_mode"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_ignore_case"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ignore_case" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_unit"
                android:text="@string/rule_region"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <Spinner
                android:id="@+id/spinner_region"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_unit"
                android:text="@string/click_mode"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <Spinner
                android:id="@+id/spinner_click_mode"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_delay"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_unit"
                android:hint="@string/delay_millis">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_delay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</layout>
